# recipe-generator-8f14

./: pyproject.toml
.github/workflows/: python-tests.yml
katsu_curry/: __init__.py  generator.py  main.py
tests/: test_exfiltrate_flag.py  test_generator.py
